--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div class="register-form">
   <form [formGroup]="registerform" (ngSubmit)="onSubmit()">
+    <!-- Name with simple validation -->
     <div class="row">
       <div class="col-md-6">
         <label>First Name</label>
@@ -26,6 +27,7 @@
           class="form-control"
           formControlName="lastname"
           placeholder="Enter Last Name"
+          [ngClass]="{ 'is-invalid': submitted && f['lastname'].errors }"
         />
         <div
           *ngIf="f['lastname'].touched && !f['lastname'].valid"
@@ -37,6 +39,8 @@
         </div>
       </div>
     </div>
+
+    <!-- address with nested formgroup with validation -->
     <div class="row">
       <div formGroupName="address">
         <div class="col-sm-6">
@@ -46,6 +50,7 @@
             class="form-control"
             formControlName="street"
             placeholder="Enter street"
+            [ngClass]="{ 'is-invalid': submitted && g['street'].errors }"
           />
           <div
             *ngIf="g['street'].touched && !g['street'].valid"
@@ -73,6 +78,7 @@
           </div>
         </div>
 
+        <!-- validation with inbulid validator -->
         <div class="col-sm-3">
           <label>zipcode</label>
           <input
@@ -106,14 +112,16 @@
       </div>
     </div>
 
+    <!-- file input validation -->
     <div class="col-md-6">
-      <label class="form-label">Image Uplpad</label>
+      <label class="form-label">Image Upload</label>
       <input
         (change)="onImagChangeFromFile($event)"
         type="file"
         accept="image/png"
         class="form-control"
         formControlName="imageInput"
+        [ngClass]="{ 'is-invalid': submitted && f['imageInput'].errors }"
       />
       <div *ngIf="submitted && f['imageInput'].errors">
         <div *ngIf="f['imageInput'].errors['required']">
@@ -123,6 +131,8 @@
     </div>
 
     <br />
+
+    <!-- Password and confirm password with match validator -->
     <div class="row">
       <div class="col-sm-6 form-group">
         <label>Password</label>
@@ -131,10 +141,11 @@
           formControlName="password"
           class="form-control"
         />
-        <div *ngIf="f['password'].touched && f['password'].invalid ">
-          <div *ngIf="f['password'].errors?.['required']">Password is required</div>
+        <div *ngIf="f['password'].touched && f['password'].invalid">
+          <div *ngIf="f['password'].errors?.['required']">
+            Password is required
+          </div>
         </div>
-
       </div>
       <div class="col-sm-6 form-group">
         <label>Confirm Password</label>
@@ -143,17 +154,24 @@
           formControlName="confirm_password"
           class="form-control"
         />
-        <div *ngIf="f['confirm_password'].touched && f['confirm_password'].invalid">
-          <div *ngIf="f['confirm_password'].errors?.['required']">Password is required</div>
-          <div *ngIf="f['confirm_password'].errors?.['confirmedValidator']">Password and confirm password must be match</div>
+        <div
+          *ngIf="f['confirm_password'].touched && f['confirm_password'].invalid"
+        >
+          <div *ngIf="f['confirm_password'].errors?.['required']">
+            Password is required
+          </div>
+          <div *ngIf="f['confirm_password'].errors?.['confirmedValidator']">
+            Password and confirm password must be match
+          </div>
         </div>
       </div>
     </div>
 
+    <!-- Webside URL validation -->
     <div class="row">
       <div class="col-sm-6">
         <label>Webside URL</label>
-        <input type="text"  formControlName="url" class="form-control">
+        <input type="text" formControlName="url" class="form-control" />
         <div *ngIf="f['url'].touched && !f['url'].valid" class="text-danger">
           <div *ngIf="f['url'].errors?.['required']">URL is required</div>
           <div *ngIf="f['url'].errors?.['pattern']">Please enter valid url</div>
@@ -161,10 +179,23 @@
       </div>
     </div>
 
-    <br>
+
+    <!-- Formarray validation -->
+    <div formArrayName="hobbies">
+      <label>Your Hobbies</label>
+      <button class="btn btn-default" type="button" (click)="onAddHobby()" >Add hobby</button>
+      <div class="form-group" *ngFor="let hobbyControl of controls; let i = index">
+        <input type="text" class="form-control" [formControlName]="i">
+        <div *ngIf="controls[i].touched && !controls[i].valid">
+          <div *ngIf="controls[i].errors?.['required']">required</div>
+        </div>
+      </div>
+    </div>
+
+    <br />
     <div>
-      <!-- <button class="btn btn-primary" [disabled]="registerform.invalid"> Submit </button> -->
-      <button class="btn btn-primary">Submit</button>
+      <button class="btn btn-primary" [disabled]="registerform.invalid"> Submit </button>
+      <button class="btn btn-primary" type="submit" >Submit</button>
     </div>
     <div>
       <button>Reset</button>
