--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -36,6 +36,7 @@
           <div *ngIf="f['lastname'].errors?.['required']">
             Field is required
           </div>
+          <div *ngIf="f['lastname'].errors?.['pattern']">Number not allow</div>
         </div>
       </div>
     </div>
