--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,17 +4,9 @@
     <div class="row">
       <div class="col-md-6">
         <label>First Name</label>
-        <input
-          type="text"
-          class="form-control"
-          formControlName="firstname"
-          placeholder="Enter First Name"
-          [ngClass]="{ 'is-invalid': submitted && f['firstname'].errors }"
-        />
-        <div
-          *ngIf="f['firstname'].touched && !f['firstname'].valid"
-          class="text-danger"
-        >
+        <input type="text" class="form-control" formControlName="firstname" placeholder="Enter First Name"
+          [ngClass]="{ 'is-invalid': submitted && f['firstname'].errors }" />
+        <div *ngIf="f['firstname'].touched && !f['firstname'].valid" class="text-danger">
           <div *ngIf="f['firstname'].errors?.['required']">
             Field is required
           </div>
@@ -22,17 +14,9 @@
       </div>
       <div class="col-md-6">
         <label>Last Name</label>
-        <input
-          type="text"
-          class="form-control"
-          formControlName="lastname"
-          placeholder="Enter Last Name"
-          [ngClass]="{ 'is-invalid': submitted && f['lastname'].errors }"
-        />
-        <div
-          *ngIf="f['lastname'].touched && !f['lastname'].valid"
-          class="text-danger"
-        >
+        <input type="text" class="form-control" formControlName="lastname" placeholder="Enter Last Name"
+          [ngClass]="{ 'is-invalid': submitted && f['lastname'].errors }" />
+        <div *ngIf="f['lastname'].touched && !f['lastname'].valid" class="text-danger">
           <div *ngIf="f['lastname'].errors?.['required']">
             Field is required
           </div>
@@ -58,17 +42,9 @@
       <div formGroupName="address">
         <div class="col-sm-6">
           <label>Address</label>
-          <input
-            type="text"
-            class="form-control"
-            formControlName="street"
-            placeholder="Enter street"
-            [ngClass]="{ 'is-invalid': submitted && g['street'].errors }"
-          />
-          <div
-            *ngIf="g['street'].touched && !g['street'].valid"
-            class="text-danger"
-          >
+          <input type="text" class="form-control" formControlName="street" placeholder="Enter street"
+            [ngClass]="{ 'is-invalid': submitted && g['street'].errors }" />
+          <div *ngIf="g['street'].touched && !g['street'].valid" class="text-danger">
             <div *ngIf="g['street'].errors?.['required']">
               street is required
             </div>
@@ -77,16 +53,8 @@
 
         <div class="col-sm-4">
           <label>city</label>
-          <input
-            type="text"
-            class="form-control"
-            formControlName="city"
-            placeholder="Enter city"
-          />
-          <div
-            *ngIf="g['city'].touched && !g['city'].valid"
-            class="text-danger"
-          >
+          <input type="text" class="form-control" formControlName="city" placeholder="Enter city" />
+          <div *ngIf="g['city'].touched && !g['city'].valid" class="text-danger">
             <div *ngIf="g['city'].errors?.['required']">city is required</div>
           </div>
         </div>
@@ -94,16 +62,8 @@
         <!-- validation with inbulid validator -->
         <div class="col-sm-3">
           <label>zipcode</label>
-          <input
-            type="text"
-            class="form-control"
-            formControlName="zipcode"
-            placeholder="Enter zipcode"
-          />
-          <div
-            *ngIf="g['zipcode'].touched && !g['zipcode'].valid"
-            class="text-danger"
-          >
+          <input type="text" class="form-control" formControlName="zipcode" placeholder="Enter zipcode" />
+          <div *ngIf="g['zipcode'].touched && !g['zipcode'].valid" class="text-danger">
             <div *ngIf="g['zipcode'].errors?.['required']">zip is required</div>
             <div *ngIf="g['zipcode'].errors?.['minlength']">Min 2 length</div>
           </div>
@@ -113,12 +73,7 @@
 
     <div class="col-md-6">
       <label>Email</label>
-      <input
-        type="text"
-        class="form-control"
-        formControlName="email"
-        placeholder="Enter Email"
-      />
+      <input type="text" class="form-control" formControlName="email" placeholder="Enter Email" />
       <div *ngIf="f['email'].touched && !f['email'].valid" class="text-danger">
         <div *ngIf="f['email'].errors?.['required']">Email is required</div>
         <div *ngIf="f['email'].errors?.['email']">Email is invalid</div>
@@ -129,14 +84,8 @@
     <!-- file input validation -->
     <div class="col-md-6">
       <label class="form-label">Image Upload</label>
-      <input
-        (change)="onImagChangeFromFile($event)"
-        type="file"
-        accept="image/png"
-        class="form-control"
-        formControlName="imageInput"
-        [ngClass]="{ 'is-invalid': submitted && f['imageInput'].errors }"
-      />
+      <input (change)="onImagChangeFromFile($event)" type="file" accept="image/png" class="form-control"
+        formControlName="imageInput" [ngClass]="{ 'is-invalid': submitted && f['imageInput'].errors }" />
       <div *ngIf="submitted && f['imageInput'].errors" class="text-danger">
         <div *ngIf="f['imageInput'].errors['required']">
           PNG Image is required
@@ -152,11 +101,7 @@
     <div class="row">
       <div class="col-sm-6 form-group">
         <label>Password</label>
-        <input
-          type="password"
-          formControlName="password"
-          class="form-control"
-        />
+        <input type="password" formControlName="password" class="form-control" />
         <div *ngIf="f['password'].touched && f['password'].invalid" class="text-danger">
           <div *ngIf="f['password'].errors?.['required']">
             Password is required
@@ -169,14 +114,8 @@
       </div>
       <div class="col-sm-6 form-group">
         <label>Confirm Password</label>
-        <input
-          type="text"
-          formControlName="confirm_password"
-          class="form-control"
-        />
-        <div
-          *ngIf="f['confirm_password'].touched && f['confirm_password'].invalid" class="text-danger"
-        >
+        <input type="text" formControlName="confirm_password" class="form-control" />
+        <div *ngIf="f['confirm_password'].touched && f['confirm_password'].invalid" class="text-danger">
           <div *ngIf="f['confirm_password'].errors?.['required']">
             Password is required
           </div>
@@ -199,16 +138,28 @@
       </div>
     </div>
 
+    <!-- add & remove validation on checkobox check -->
+    add & remove validation on checkbox check
+    <div class="from-check">
+      <input type="checkbox" class="form-check-input" (change)="addValidation($event)">add income
+    </div>
+
+    <div *ngIf="showField">
+      <input type="number" class="form-control" formControlName="income" placeholder="income">
+      <div *ngIf="f['income'].touched && !f['income'].valid" class="text-danger">
+        <div *ngIf="f['income'].errors?.['required']">
+          Field is required
+        </div>
+      </div>
+    </div>
+
     <!-- Formarray validation -->
     <div formArrayName="hobbies">
       <label>Your Hobbies</label>
       <button class="btn btn-default" type="button" (click)="onAddHobby()">
         Add hobby
       </button>
-      <div
-        class="form-group"
-        *ngFor="let hobbyControl of controls; let i = index"
-      >
+      <div class="form-group" *ngFor="let hobbyControl of controls; let i = index">
         <input type="text" class="form-control" [formControlName]="i" />
         <div *ngIf="controls[i].touched && !controls[i].valid" class="text-danger">
           <div *ngIf="controls[i].errors?.['required']">required</div>
@@ -225,27 +176,17 @@
         {{data.name}}
       </label>
     </div>
-      <div *ngIf="f['checkArray'].errors?.['required']" class="text-danger">
-        Checkbox is required, select atleast one value.
-      </div>  
-    
+    <div *ngIf="f['checkArray'].errors?.['required']" class="text-danger">
+      Checkbox is required, select atleast one value.
+    </div>
+
 
     <!-- single checkbox validation -->
     <div class="form-group form-check">
-      <input
-        type="checkbox"
-        formControlName="acceptTerms"
-        id="acceptTerms"
-        class="form-check-input"
-        [ngClass]="{ 'is-invalid': submitted && f['acceptTerms'].errors }"
-      />
-      <label for="acceptTerms" class="form-check-label"
-        >Accept Terms & Conditions</label
-      >
-      <div
-        *ngIf="submitted && f['acceptTerms'].errors"
-        class="invalid-feedback"
-      >
+      <input type="checkbox" formControlName="acceptTerms" id="acceptTerms" class="form-check-input"
+        [ngClass]="{ 'is-invalid': submitted && f['acceptTerms'].errors }" />
+      <label for="acceptTerms" class="form-check-label">Accept Terms & Conditions</label>
+      <div *ngIf="submitted && f['acceptTerms'].errors" class="invalid-feedback">
         <!-- Accept Ts & Cs is required -->
       </div>
     </div>
